file(GLOB_RECURSE HEADER_FILES "./src/*.h")

if (WIN32)
    file(GLOB SOURCE_FILES "./src/*.c" "./src/*.cpp" "./src/avx/*.cpp" "./src/convex/*.cpp" "./src/mesh/*.cpp" "./src/windows/*.cpp")
else()
    file(GLOB SOURCE_FILES "./src/*.c" "./src/*.cpp" "./src/convex/*.cpp" "./src/mesh/*.cpp")
endif()

#add_compile_definitions (PX_PHYSX_CORE_EXPORTS)
add_compile_definitions (DELAYIMP_INSECURE_WRITABLE_HOOKS)

include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include/geometry )
include_directories( ../../Include/cloth )
include_directories( ../../Include/cooking )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/sweep )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )
include_directories( ../PhysXCooking/src )
include_directories( ../PhysXCooking/src/mesh )
include_directories( ../PhysXCooking/src/convex )
include_directories( ../PhysXExtensions/src )

add_library(PhysX3Cooking ${HEADER_FILES} ${SOURCE_FILES})