file(GLOB_RECURSE HEADER_FILES "./src/*.h")
#file(GLOB_RECURSE SOURCE_FILES "./src/*.c" "./src/*.cpp")
file(GLOB SOURCE_FILES "./src/*.cpp")

if (WIN32)
	file(GLOB_RECURSE HEADER_FILES_SUBFOLDER "../src/windows/*.h")
    file(GLOB_RECURSE SOURCE_FILES_SUBFOLDER "./src/windows/*.cpp")
    list(APPEND HEADER_FILES ${HEADER_FILES_SUBFOLDER})
    list(APPEND SOURCE_FILES ${SOURCE_FILES_SUBFOLDER})
else ()
    file(GLOB_RECURSE HEADER_FILES_SUBFOLDER "../src/unix/*.h")
    file(GLOB_RECURSE SOURCE_FILES_SUBFOLDER "./src/unix/*.cpp")
    list(APPEND HEADER_FILES ${HEADER_FILES_SUBFOLDER})
    list(APPEND SOURCE_FILES ${SOURCE_FILES_SUBFOLDER})
endif()

#add_compile_definitions (PX_PHYSX_CORE_EXPORTS)
add_compile_definitions (DELAYIMP_INSECURE_WRITABLE_HOOKS)

#include_directories( ../../externals/nvToolsExt/1/include )
#include_directories( ../../externals/nvToolsExt/1/include/stdint )
include_directories( ../../Include/foundation )
include_directories( ../foundation/include )
include_directories( ../../Include/physxprofilesdk )
include_directories( ../../Include/physxvisualdebuggersdk )
include_directories( ../../Include/common )
include_directories( ../../Include )
include_directories( ../Common/src )
include_directories( ../Common/src/windows )
include_directories( ../PhysXProfile/include )
include_directories( ../PhysXProfile/src )
include_directories( ../../Include/geometry )
include_directories( ../GeomUtils/headers )
include_directories( ../GeomUtils/src )
include_directories( ../GeomUtils/src/contact )
include_directories( ../GeomUtils/src/common )
include_directories( ../GeomUtils/src/convex )
include_directories( ../GeomUtils/src/distance )
include_directories( ../GeomUtils/src/sweep )
include_directories( ../GeomUtils/src/gjk )
include_directories( ../GeomUtils/src/intersection )
include_directories( ../GeomUtils/src/mesh )
include_directories( ../GeomUtils/src/hf )
include_directories( ../GeomUtils/src/pcm )

add_library(PhysX3Foundation ${HEADER_FILES} ${SOURCE_FILES})