project(FBApplication)

# define header and source files for the library
file(GLOB_RECURSE HEADER_FILES "../../Include/FBApplication/*.h" "../../Include/FBApplication/*.inl")
file(GLOB_RECURSE SOURCE_FILES "../../Source/FBApplication/*.cpp")

set(FB_HEADER_REL_PATH "${FB_ROOT}/FBEngine/cpp/Project/FBApplication/../../Include/FBApplication")
set(FB_SOURCE_REL_PATH "${FB_ROOT}/FBEngine/cpp/Project/FBApplication/../../Source/FBApplication")

foreach(_source IN ITEMS ${HEADER_FILES})
    get_filename_component(_source_file_path "${_source}" DIRECTORY)
    String(REPLACE "${FB_HEADER_REL_PATH}" "" _group_file_path "${_source_file_path}")
    String(REPLACE "/" "\\" _group_file_path "${_group_file_path}")
    source_group("Header Files\\${_group_file_path}" FILES "${_source}")
endforeach()

foreach(_source IN ITEMS ${SOURCE_FILES})
    get_filename_component(_source_file_path "${_source}" DIRECTORY)
    String(REPLACE "${FB_SOURCE_REL_PATH}" "" _group_file_path "${_source_file_path}")
    String(REPLACE "/" "\\" _group_file_path "${_group_file_path}")
    source_group("Source Files\\${_group_file_path}" FILES "${_source}")
endforeach()


if (UNIX)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
endif()

include_directories( ${FB_ROOT}/Dependencies/boost )

if (FB_USE_ONETBB)
    include_directories( ${FB_ROOT}/Dependencies/onetbb/include )
elseif (FB_USE_TBB)
    include_directories( ${FB_ROOT}/Dependencies/tbb/include )
endif()

include_directories( ${FB_ROOT}/Dependencies/magic_get/include )
include_directories( ${FB_ROOT}/Dependencies/tinyxml/include )
include_directories( ${FB_ROOT}/Dependencies/utf8/source )
include_directories( ${FB_ROOT}/AdditionalLibraries/ )

if (FB_USE_FBXSDK)
    include_directories( ${FB_ROOT}/AdditionalLibraries/fbxsdk/2020.0.1/include )
endif()

if (FB_USE_ASSET_IMPORT)
    include_directories( ${FB_ROOT}/AdditionalLibraries/assimp/include )
    include_directories( ${FB_ROOT}/AdditionalLibraries/assimp/include/vc142 )
endif()

include_directories( ${FB_ROOT}/AdditionalLibraries/entt/src )
include_directories( ${FB_ROOT}/AdditionalLibraries/luabind/inc )
include_directories( ${FB_ROOT}/AdditionalLibraries/wildmagic/SDK/Include )
include_directories( ${FB_ROOT}/AdditionalLibraries/zlib )
include_directories( ${FB_ROOT}/AdditionalLibraries/zziplib )
include_directories( ../../Include )

include_directories( ${FB_ROOT}/Tools/FBXConverter/Include )

if (FB_USE_PRECOMPILED_HEADERS)
    use_precompiled_header(FBApplication "FBApplication/FBApplicationPCH.h" "${FB_ROOT}/FBEngine/cpp/Source/FBApplication/FBApplicationPCH.cpp")
endif()

if (NOT FB_STATIC_LIB)
    if (WIN32)
        link_directories(FBApplication ${FB_ROOT}/libs/windows/${FB_TOOLSET}/${FB_ARCH}/${FB_STATIC_LINK_CRT_TYPE}/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/windows/${FB_TOOLSET}/${FB_ARCH}/${FB_STATIC_LINK_CRT_TYPE}/tbb/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/windows/boost/${CMAKE_BUILD_TYPE})
    elseif (APPLE)
        link_directories(FBApplication ${FB_ROOT}/libs/macOS/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/macOS)

        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/macOS/boost)
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/macOS/boost/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/macOS/tbb/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS)
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/${CMAKE_BUILD_TYPE})

        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/assimp/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/physx/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/wildmagic/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/${CMAKE_BUILD_TYPE})

        if (FB_GRAPHICS_SYSTEM_OGRENEXT)
            link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/ogrenext/${CMAKE_BUILD_TYPE})
            link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/ogrenext/dependencies/lib/${CMAKE_BUILD_TYPE})
        elseif (FB_GRAPHICS_SYSTEM_OGRE)
            link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/ogre/)
            link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/macOS/ogre/dependencies/lib/)
            link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/directx/Lib/x64)
        endif ()
    elseif (UNIX)
        link_directories(FBApplication ${FB_ROOT}/libs/linux/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/linux)
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/linux/boost)
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/linux/boost/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/linux/boost/${FB_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/Dependencies/lib/linux/tbb)
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/linux)
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/linux/physx/${CMAKE_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/linux/physx/${FB_BUILD_TYPE})
        link_directories(FBApplication ${FB_ROOT}/AdditionalLibraries/lib/linux/wildmagic)
    endif ()
endif ()

if (FB_STATIC_LIB)
    add_library(FBApplication STATIC ${HEADER_FILES} ${SOURCE_FILES})
else ()
    add_library(FBApplication SHARED ${HEADER_FILES} ${SOURCE_FILES})
endif()

if (NOT FB_STATIC_LIB)
    if (WIN32)
        target_link_libraries(FBApplication FBCore.lib )
    elseif (APPLE)

    elseif (UNIX)
    endif ()
endif ()

set_target_properties (FBApplication PROPERTIES FOLDER Engine/Cpp/Core)

if (NOT _FB_STATIC_LIB_)
	target_compile_definitions(FBApplication PUBLIC FBApplication_EXPORTS)
endif()