if (WIN32)
    file(GLOB_RECURSE HEADER_FILES "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.h" "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.inl")
    file(GLOB_RECURSE SOURCE_FILES "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.cpp" "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.c")
elseif(APPLE)
    file(GLOB_RECURSE HEADER_FILES "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.h" "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.inl")
    file(GLOB_RECURSE SOURCE_FILES "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.cpp" "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.c" "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.mm")
else()
    file(GLOB_RECURSE HEADER_FILES "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.h" "${FB_ROOT}/FBEngine/cpp/Include/FBCore/*.inl")
    file(GLOB_RECURSE SOURCE_FILES "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.cpp" "${FB_ROOT}/FBEngine/cpp/Source/FBCore/*.c")
endif()

set(FB_HEADER_REL_PATH "${FB_ROOT}/FBEngine/cpp/Include/FBCore")
set(FB_SOURCE_REL_PATH "${FB_ROOT}/FBEngine/cpp/Source/FBCore")

add_compile_definitions (ENABLE_PTR_RTTI=0)
add_compile_definitions (_FB_STATIC_LIB_)

foreach(_source IN ITEMS ${HEADER_FILES})
    get_filename_component(_source_file_path "${_source}" DIRECTORY)
    string(REPLACE "${FB_HEADER_REL_PATH}" "" _group_file_path "${_source_file_path}")
    string(REPLACE "\\" "/" _group_file_path "${_group_file_path}")
    source_group("Header Files\\${_group_file_path}" FILES "${_source}")
endforeach()

foreach(_source IN ITEMS ${SOURCE_FILES})
    get_filename_component(_source_file_path "${_source}" DIRECTORY)
    string(REPLACE "${FB_SOURCE_REL_PATH}" "" _group_file_path "${_source_file_path}")
    string(REPLACE "/" "\\" _group_file_path "${_group_file_path}")
    source_group("Source Files\\${_group_file_path}" FILES "${_source}")
endforeach()

if (UNIX)
    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
endif()

include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/boost )

if (FB_USE_ONETBB)
    include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/onetbb/include )
elseif (FB_USE_TBB)
    include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/tbb/include )
endif()

include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/cJSON )
include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/tinyxml/include )
include_directories( ${CMAKE_SOURCE_DIR}/Dependencies/utf8/source )
include_directories( ${CMAKE_SOURCE_DIR}/FBEngine/cpp/Include )
include_directories( ${CMAKE_SOURCE_DIR}/AdditionalLibraries )

if(APPLE)
    set(CMAKE_MACOSX_RPATH 1)
    find_library(COCOA_LIBRARY Cocoa)
    find_library(FOUNDATION_LIBRARY Foundation)
    find_library(IOKIT_LIBRARY IOKit)
    find_path(COCOA_INCLUDE_DIR Cocoa/Cocoa.h)
    find_library(CARBON_LIBRARY Carbon)

    #add_definitions(-x objective-c++)
endif()

if (FB_USE_PRECOMPILED_HEADERS)
    use_precompiled_header(FBCore "FBCore/FBCorePCH.h" "${CMAKE_SOURCE_DIR}/FBEngine/cpp/Source/FBCore/FBCorePCH.cpp")

    file(GLOB_RECURSE OGRE_SOURCE_FILES "${CMAKE_SOURCE_DIR}/FBEngine/cpp/Source/FBCore/Extern/*.cpp")
    set_source_files_properties(${OGRE_SOURCE_FILES} PROPERTIES SKIP_PRECOMPILE_HEADERS ON)

    file(GLOB_RECURSE OGRE_SOURCE_FILES "${CMAKE_SOURCE_DIR}/FBEngine/cpp/Source/FBCore/Extern/*.c")
    set_source_files_properties(${OGRE_SOURCE_FILES} PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
endif()

if (NOT FB_STATIC_LIB)
    if (WIN32)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/libs/windows/${FB_TOOLSET}/${FB_ARCH}/${FB_STATIC_LINK_CRT_TYPE}/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/windows/${FB_TOOLSET}/${FB_ARCH}/${FB_STATIC_LINK_CRT_TYPE}/tbb/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/windows/boost/${CMAKE_BUILD_TYPE})
    elseif (APPLE)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/libs/macOS/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/macOS)

        link_directories(FBCore ${FB_ROOT}/Dependencies/lib/macOS/boost)
        link_directories(FBCore ${FB_ROOT}/Dependencies/lib/macOS/boost/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/macOS/tbb/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/${CMAKE_BUILD_TYPE})

        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/assimp/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/physx/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/wildmagic/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/${CMAKE_BUILD_TYPE})

        if (FB_GRAPHICS_SYSTEM_OGRENEXT)
            link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/ogrenext/${CMAKE_BUILD_TYPE})
            link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/ogrenext/dependencies/lib/${CMAKE_BUILD_TYPE})
        elseif (FB_GRAPHICS_SYSTEM_OGRE)
            link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/ogre/)
            link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/macOS/ogre/dependencies/lib/)
            link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/directx/Lib/x64)
        endif ()
    elseif (UNIX)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/libs/linux/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/linux)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/linux/boost)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/linux/boost/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/linux/boost/${FB_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/Dependencies/lib/linux/tbb)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/linux)
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/linux/physx/${CMAKE_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/linux/physx/${FB_BUILD_TYPE})
        link_directories(FBCore ${CMAKE_SOURCE_DIR}/AdditionalLibraries/lib/linux/wildmagic)
    endif ()

    if (WIN32)
        #target_link_libraries(FBCore FBMath.lib )
    elseif (APPLE)

    elseif (UNIX)
    endif ()
endif ()

if (FB_STATIC_LIB)
    add_library(FBCore STATIC ${HEADER_FILES} ${SOURCE_FILES})
else ()
    add_library(FBCore SHARED ${HEADER_FILES} ${SOURCE_FILES})
endif()


set_target_properties (FBCore PROPERTIES FOLDER Engine/Cpp/Core)

if (NOT _FB_STATIC_LIB_)
	target_compile_definitions(FBCore PUBLIC FBCore_EXPORTS)
endif()